--- a/style03.css
+++ b/style03.css
@@ -14,7 +14,14 @@ body{
     max-width: 1200px;
     margin: auto;
 }
-    
+
+/* Banner */
+.banner{
+    height: 265px;
+    width: 100%;
+}
+
+
 /* header */
 .header{
     background-color: #565656;
@@ -31,7 +38,7 @@ body{
 
 .nav{
     background-color: #000;
-    height: 50px;
+    /* height: 50px; */
 }
 
 .nav a{
@@ -47,7 +54,7 @@ body{
 .nav ul li{
     display: block;
     float: left;
-    padding:0 40px;
+    padding:12px 24px;
 }
 
 
@@ -57,7 +64,8 @@ body{
     padding: 40px;
 }
 .content img{
-    width: 100%;
+    
+    width: 20%;
 }
 .content ul{
     padding-left: 60px;
