--- a/style03.css
+++ b/style03.css
@@ -2,47 +2,21 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Montserrat", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
-body{
-    background-color: #ededed;
-}
+/*header*/
 
-.container{
-    background-color: #fff;
-    max-width: 1200px;
-    margin: auto;
-}
-
-/* Banner */
-.banner{
-    height: 265px;
-    width: 100%;
-}
-
-
-/* header */
 .header{
-    background-color: #565656;
-    color: #fff;
-    /*padding:10px 40px;*/
-    height: 120px;
-}
-
-.header h1{
-    font-weight: 400;
-    line-height: 120px;
-    padding-left: 40px;
-}
-
-.nav{
-    background-color: #000;
-    /* height: 50px; */
+    height: 50px;
 }
 
 .nav a{
-    color: #fff;
+
+    font-size: 18px;
+    color: black;
     text-decoration: none;
 }
 
@@ -58,40 +32,42 @@ body{
 }
 
 
+.banner{
+    height: 265px;
+    font-size: 64px 24px;
+    color: white;
+    width: 100%;
+}
+.logo{
+    text-align: center;
+}
 
-/* content */
+/*content*/
+
+.header h1{
+    padding-top: 40px;
+}
+
 .content{
-    padding: 40px;
-}
-.content img{
+    height: 400px;
     
-    width: 20%;
-}
-.content ul{
-    padding-left: 60px;
 }
 
-content h1, content h2{
-    font-weight: 400;
-    margin: 20px 0;
+.content img{
+    margin-right: 500px;
+    height: 400px;
+    width: 300px;   
+    padding-bottom: 20px;
+    float: right;
 }
 
-p{
-    margin: 10px 0;
-}
+/*footer*/
 
-/* footer */
 .footer{
-    padding:20px 40px;
-    background-color: #000;
-}
-.footer a{
-    color: #fff;
-    text-decoration: none;
-    line-height: 60px;
-}
-
-.footer a:hover{
-    color: #ededed;
-    text-decoration: underline;
+    background-color: black;
+    opacity: 0.64;
+    margin-top: 211px;
+    text-align: center;
+    color: white;
+    padding: 64px;
 }
