--- a/iseseisev.css
+++ b/iseseisev.css
@@ -1,107 +1,130 @@
+/* global */
+* {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 300;
+}
 
-/* Global */
-*{
+html, body {
+    height: 100%;
     margin: 0;
-    padding: 0;
-    font-family: 'Montserrat';font-size: 22px;
 }
 
-body{
-   
-}
-
-.container{
-    background-color: transparent;
-    max-width: 100%;
-    min-height: 100vh;
-    margin:auto;
+body { 
     display: flex;
     flex-direction: column;
 }
 
-/* header */
-.header{
-    background-color: transparent;
-    height: 265px;
-    text-align: center;
-    padding: 12px 24px;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
+/* päis */
 
-.nav, .header{
-    background-image: url(cool-background.png);
-    background-repeat: no-repeat;
+.taust {
+    height: 350px;
+    background-image: url('taust.jpg');
     background-size: cover;
-}
-
-.header h1{
-    margin: 10px;
-    line-height: 120px;
-    font-size: 64px;
-}
-
-.nav{
-    background-color: transparent;
-    height: 50px;
-    padding: 12px 24px;
-    color: black;
-}
-
-.nav a{
-    color: black;
-    text-decoration: none;
-    font-size: 18px;
-}
-
-.nav ul{
-    list-style-type: none;
-    line-height: 50px;
-}
-
-.nav ul li{
-    display: block;
-    float: left;
-    padding: 0 40px;
-}
-
-
-
-/* content */
-.content{
-    background-color: white;
-    padding: 100px;
-    line-height: 2.0;
+    background-position: center center;
+    background-repeat: no-repeat;
+    color: #fff;
+    text-align: center;
     display: flex;
-    align-items: flex-start;
-    gap: 100px;
-    min-height: 500px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
-.content img{
+
+/* menüü */
+
+.menu {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    margin-right: 80px;
+    margin-top: 80px;
+}
+
+.menu ul {
+    list-style: none;
+    display: flex;
+    margin: 0;
+}
+
+.menu ul li a {
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+    padding: 0 25px;
+    font-weight: 400;
+}
+
+/* Banner */
+
+.banner h1 {
+    font-size: 64px;
+    margin-bottom: 0px;
+}
+
+.banner p {
+    font-size: 24px;
+    margin-bottom: 50px;
+}
+
+.banner button {
+    padding: 12px 24px;
+    background: black;
+    color: white;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    margin-bottom: 100px;
+}
+
+/* sisu */
+
+.content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    height: 400px;
+    flex-grow: 1;
+    margin-bottom: 100px;
+
+}
+
+.tekst {
+    max-width: 600px;
+    margin-bottom: 100px;
+}
+
+.tekst h2 {
+    font-size: 36px;
+    margin-bottom: 40px;
+}
+
+.tekst p {
+    font-size: 15px;
+    line-height: 1.5;
+    margin-bottom: 40px;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.pilt img {
     width: 300px;
     height: 400px;
-    object-fit: cover;
-    flex-shrink: 0;
-    float: right;
-    padding: 20px;
+    padding: 50px;
 }
 
-.content ul{
-    padding-left: 60px;
-}
+/* jalus */
 
-p{
-    margin: 10px 0;
-}
-
-/* footer */
-.footer{
+.footer {
+    background: #000;
+    color: #fff;
     text-align: center;
-    padding: 64px;
-    background-color: #000;
-    color: white;
     opacity: 0.64;
+    padding: 27px 0;
+    font-size: 24px;
 }
